--- a/.github/workflows/scaler-pr.yml
+++ b/.github/workflows/scaler-pr.yml
@@ -25,12 +25,19 @@ jobs:
           workflowRunId: ${{ github.run_id }}
 
       - name: Run Unit Tests
-        uses: ./.github/actions/dotnet-test
+        uses: ./.github/actions/dotnet-publish
         with:
           assemblyVersion: ${{ steps.chart.outputs.assemblyVersion }}
+          azureClientId: ${{ secrets.AZURE_CLIENT_ID }}
+          azureCodeSigningAccountName: ${{ secrets.AZURE_CODESIGNING_NAME }}
+          azureSubscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          azureTenantId: ${{ secrets.AZURE_TENANT_ID }}
           buildConfiguration: Release
+          certificateProfileName: ${{ secrets.AZURE_CODESIGNING_PROFILE_NAME }}
           fileVersion: ${{ steps.chart.outputs.assemblyFileVersion }}
-          resultsDirectory: ${{ runner.temp }}/TestResults
+          repositoryUri: ${{ github.server_url }}/${{ github.repository }}
+          sign: 'true'
+          testResultsDirectory: ${{ runner.temp }}/TestResults
 
       - name: Upload Code Coverage
         uses: ./.github/actions/code-coverage
@@ -45,13 +52,6 @@ jobs:
           fileVersion: ${{ steps.chart.outputs.assemblyFileVersion }}
           imageRepository: durabletask-azurestorage-scaler
           imageTag: ${{ steps.chart.outputs.imageTag }}
-          sign: 'true'
-          azureTenantId: ${{ secrets.AZURE_TENANT_ID }}
-          azureClientId: ${{ secrets.AZURE_CLIENT_ID }}
-          azureSubscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          azureCodeSigningAccountName: ${{ secrets.AZURE_CODESIGNING_NAME }}
-          certificateProfileName: ${{ secrets.AZURE_CODESIGNING_PROFILE_NAME }}
-          repositoryUri: ${{ github.server_url }}/${{ github.repository }}
 
       - name: Validate Helm Chart
         uses: ./.github/actions/helm-test
