Use cmd and fix docker context

--- a/.github/actions/docker-build/action.yml
+++ b/.github/actions/docker-build/action.yml
@@ -35,8 +35,8 @@ runs:
       with:
         build-args: |
           COPY=true
-          PUBLISH_DIRECTORY=${{ runner.temp }}/app
-        context: .
+          PUBLISH_DIRECTORY=./
+        context: ${{ runner.temp }}/app
         file: ./src/Keda.Scaler.DurableTask.AzureStorage/Dockerfile
         labels: ${{ steps.meta.outputs.labels }}
         push: false
