--- a/.github/workflows/scaler-pr.yml
+++ b/.github/workflows/scaler-pr.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build .NET App
+    name: Build
     runs-on: windows-latest
     outputs:
       chartVersion: ${{ steps.chart.outputs.chartVersion }}
@@ -27,7 +27,7 @@ jobs:
         with:
           workflowRunId: ${{ github.run_id }}
 
-      - name: Run Unit Tests
+      - name: Build Scaler
         uses: ./.github/actions/dotnet-publish
         with:
           assemblyVersion: ${{ steps.chart.outputs.assemblyVersion }}
@@ -53,6 +53,9 @@ jobs:
     needs: build
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Build Docker Image
         uses: ./.github/actions/docker-build
         with:
